[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/graphics/stars.png" type="Texture" id=1]
[ext_resource path="res://assets/theme.tres" type="Theme" id=2]
[ext_resource path="res://assets/fonts/random-5/random-5-buttons.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/fonts/random-5/Random5Bold-ALGpM.otf" type="DynamicFontData" id=4]
[ext_resource path="res://assets/scripts/Checkwinner.gd" type="Script" id=5]

[sub_resource type="Shader" id=4]
code = "shader_type canvas_item;

void fragment() {
	COLOR = texture(TEXTURE, UV);
	COLOR.a = 1.0 - UV.y + 0.2;
}
"

[sub_resource type="ShaderMaterial" id=5]
shader = SubResource( 4 )

[sub_resource type="StyleBoxFlat" id=1]
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.952941, 0.952941, 0.952941, 1 )

[sub_resource type="DynamicFont" id=2]
size = 40
use_mipmaps = true
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="Animation" id=3]
resource_name = "In"
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 300, -600 ), Vector2( 340, 110 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[node name="Checkwinner" type="Control" groups=[
"Checkwinner",
]]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -300.0
margin_top = -250.0
margin_right = 300.0
margin_bottom = 250.0
rect_min_size = Vector2( 600, 500 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
self_modulate = Color( 0.160784, 0.160784, 0.160784, 1 )
material = SubResource( 5 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 44.0
margin_right = -44.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Panel"]
visible = false
self_modulate = Color( 1, 1, 1, 0.698039 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Restart" type="Button" parent="Panel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -170.0
margin_top = 222.0
margin_right = 170.0
margin_bottom = 41.0
hint_tooltip = "Try again"
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 3 )
text = "Restart"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="Button" parent="Panel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -170.0
margin_top = 280.0
margin_right = 170.0
margin_bottom = 41.0
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 3 )
text = "Main Menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="Button" parent="Panel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -170.0
margin_top = 338.0
margin_right = 170.0
margin_bottom = 41.0
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 3 )
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="Panel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -200.0
margin_top = 59.0
margin_right = 200.0
margin_bottom = 148.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShowWinner" type="Label" parent="Panel/Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -118.0
margin_top = -29.5
margin_right = 118.0
margin_bottom = 29.5
custom_fonts/font = SubResource( 2 )
text = "YOU LOSE"
uppercase = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/In = SubResource( 3 )
[connection signal="pressed" from="Panel/Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="Panel/Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="Panel/Quit" to="." method="_on_Quit_pressed"]
